# rai-agrihusky

./: .gitignore  CMakeLists.txt  README.md  package.xml  setup.py
ros1_ws/src/: README.md  gnss_rtk_exec.sh
ros1_ws/src/gps_map/: CMakeLists.txt  package.xml
ros1_ws/src/gps_map/data/: gps-2025-05-20-13-37-14.bag
ros1_ws/src/gps_map/launch/: gps_map.launch
ros1_ws/src/gps_map/src/: visualizer.py
ros1_ws/src/ublox_msg/: CMakeLists.txt  package.xml
ros1_ws/src/ublox_msg/msg/: Flags.msg  UbxNavPvt.msg  Valid.msg
ros1_ws/src/ublox_ros/: CMakeLists.txt  package.xml
ros1_ws/src/ublox_ros/include/ublox_ros/: ubx_nav_pvt_ros.hpp
ros1_ws/src/ublox_ros/src/: ublox_ros_publisher.cpp  ublox_ros_subscriber.cpp  ubx_nav_pvt_ros.cpp
ros2_ws/src/: README.md  gnss-rtk-exec.sh  rosbag.sh  simulation.sh  soil-probe-v2.ino
ros2_ws/src/agrihusky/: CMakeLists.txt  package.xml  setup.py  simulation.sh
ros2_ws/src/agrihusky/data/: gps-2025-05-20-13-37-14.txt  new-waypoints-gps.txt  new-waypoints.txt
ros2_ws/src/agrihusky/data/rosbag2_2025_05_29-13_07_44/: metadata.yaml  rosbag2_2025_05_29-13_07_44_0.db3
ros2_ws/src/agrihusky/data/rosbag2_2025_05_30-11_47_47/: metadata.yaml
ros2_ws/src/agrihusky/launch/: simulation.launch.py
ros2_ws/src/agrihusky/src/: controller.local.py  controller.py  fake_gps_pub.py  fake_waypoint_pub.py  probe_interface.py  visualizer.py  waypoint_pub.py
ros2_ws/src/agrihusky/src/simulation/: fake_gps_pub.py  fake_odometry_pub.py  tf_pub.py  visualizer.py
ros2_ws/src/agrihusky/src/tf/: tf_gps_pub.py
ros2_ws/src/agrihusky/src/transform/: tf_imu_pub.py
ros2_ws/src/agrihusky/srv/: ProbeRequest.srv  WaypointRequest.srv
ros2_ws/src/ublox_msg/: CMakeLists.txt  package.xml
ros2_ws/src/ublox_msg/msg/: Flags2.msg  Flags3.msg
ros2_ws/src/ublox_ros/: CMakeLists.txt  package.xml
ros2_ws/src/ublox_ros/include/ublox_ros/: ubx_nav_pvt_ros.hpp
ros2_ws/src/ublox_ros/src/: publisher.cpp  subscriber.cpp  ubx_nav_pvt_ros.cpp
ros2_ws/test/: coordinates.py  probe.py
src/: controller.py  fake_odometry_pub.py  fake_waypoint_pub.py
