<?xml version="1.0"?>
<package format="2">
  <name>ublox_ros</name>
  <version>0.0.0</version>
  <description>The ublox_ros package</description>

  <maintainer email="yosri.fersi@ltu.se">Yosri Fersi</maintainer>


  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>

  <depend>ublox_msg</depend>

  <export>
    

  </export>
</package>
